# declarative-sdk-for-k

./: .commander-pin  .cursorrules  .gitignore  .sync_baseline  AGENTS.md  AUDIT.md  CHANGELOG.md  LICENSE  README.md  RECONCILIATION.md  REVIEW.md  SCAFFOLD.md  SECURITY.md  V1_GA_CHECKLIST.md  client-config.json  pyproject.toml
.github/: SCAFFOLD.md
.github/ISSUE_TEMPLATE/: codex_task.yml
.github/workflows/: ci.yml  codex-task.yml  dsk-example.yml  live-smoke.yml  publish.yml  scope-fence.yml
.pending/: ci.yml.pending
backstage-plugin-dsk/: package.json
backstage-plugin-dsk-backend/: package.json
backstage-plugin-dsk-backend/src/: index.ts  plugin.ts  router.ts
backstage-plugin-dsk/src/: index.ts  plugin.ts
crossplane/compositions/: keeperrecord.composition.yaml  keepersharedfolder.composition.yaml
crossplane/xrds/: keeperrecord.xrd.yaml  keepersharedfolder.xrd.yaml
declarative_sdk_k/: __init__.py
docs/: ARCHITECTURE_GAPS.md  BACKSTAGE_INTEGRATION.md  CAPABILITY_MATRIX.md  CODEX_CLI.md  CODEX_GITHUB.md  COMMANDER.md  COMMANDER_COVERAGE.md  COMMANDER_FIX_PAMUSER.md  COMMANDER_SERVICE_MODE.md  COMPATIBILITY.md  CROSSPLANE_INTEGRATION.md  DAYBOOK.md  DSK_NEXT_WORK.md  ECOSYSTEM_ROADMAP.md  EXECUTION_PLAN_HEAVY_ORCHESTRATION.md  GATEWAY_CREATE_DESIGN.md  GITHUB_ACTIONS.md  ISSUE_6_JIT_SUPPORT_BOUNDARY.md  ISSUE_7_GATEWAY_CREATE_PROJECTS_DESIGN.md  JIT_DESIGN.md  K8S_ESO_INTEGRATION.md  KSM_BOOTSTRAP.md  KSM_INTEGRATION.md  LIVE_TEST_RUNBOOK.md  LOGIN.md  MCP_SERVER.md  MSP_FAMILY_DESIGN.md  MSP_WRITES_LIFT_PLAN.md  NEXT_SPRINT_PARALLEL_ORCHESTRATION.md  ORCHESTRATION_PAM_PARITY.md  ORCHESTRATION_PHASE0_PARALLEL.md  ORCHESTRATION_UNTIL_COMPLETE.md  P18_SYNC_UPSTREAM_EXTRACTOR_DECISION.md  PAM_PARITY_PROGRAM.md  RBI_READBACK_DESIGN.md  RELEASING.md  SCAFFOLD.md  SDK_COMPLETION_PLAN.md  SDK_DA_COMPLETION_PLAN.md  SDK_ORCHESTRATED_FEATURE_COMPLETE.md  (+8 more)
docs/live-proof/: README.md  keeper-enterprise.v1.6574827c.team-roles.sanitized.json  keeper-ksm.v1.89047920.sanitized.json  keeper-pam-environment.v1.89047920.machine.sanitized.json  keeper-pam-environment.v1.89047920.rbi.sanitized.json  keeper-vault-sharing.v1.535e03f.folderlifecycle.sanitized.json  keeper-vault.v1.91119c4.sanitized.json  keeper-vault.v1.sanitized.template.json
docs/sprint-memos/: 7h-37-S1-multiprofile.prompt.md  7h-37-S2-vault-smoke.prompt.md  7h-37-S3-lock-design.prompt.md  7h-37-S4-ci-matrix.prompt.md  7h-38-L1-vault-live.prompt.md  7h-38-L3-parallel-guard.prompt.md  7h-39-V1-record-types.prompt.md  7h-39-V2-attachments.prompt.md  7h-39-V3-keeper-fill.prompt.md  7h-39-V4-regex-memo.prompt.md  7h-40-V5a-sharing.prompt.md  7h-40-V5d-operator-bootstrap.prompt.md  7h-40-V5e-bus-decision.prompt.md  7h-41-V6a-sharing-mock.prompt.md  7h-41-V6b-sharing-siblings.prompt.md  7h-41-V6d-roadmap.prompt.md  7h-42-V7a-mock-siblings.prompt.md  7h-42-V7b-cli-provider.prompt.md  7h-42-V7c-cli-dispatch.prompt.md  7h-42-V7d-split-review.prompt.md  README.md  SCAFFOLD.md
examples/: SCAFFOLD.md  pam-database-cluster.yaml  pam-machine-multi.yaml  pamDatabase.yaml  pamDirectory.yaml  pamMachine.yaml  pamRemoteBrowser.yaml  sharing-folders-shared.yaml  sharing-grantees.yaml  sharing.example.yaml  vault-attachments.yaml  vault-record-types.yaml  vault-records.yaml
examples/msp/: 02-with-modules.yaml
examples/scaffold_only/: vaultMinimal.yaml  vaultOneLogin.yaml  vaultSharingMinimal.yaml
examples/vault/: login-record.yaml  shared-folder.yaml
keeper_sdk/: SCAFFOLD.md  __init__.py
keeper_sdk/auth/: SCAFFOLD.md  __init__.py  helper.py
keeper_sdk/cli/: SCAFFOLD.md  __init__.py  __main__.py  main.py  renderer.py
keeper_sdk/core/: SCAFFOLD.md  __init__.py  diff.py  enterprise_diff.py  enterprise_graph.py  epm_diff.py  errors.py  graph.py  integrations_events_diff.py  integrations_identity_diff.py  interfaces.py  ksm_diff.py  ksm_graph.py  manifest.py  metadata.py  models.py  models_enterprise.py  models_epm.py  models_integrations_events.py  models_integrations_identity.py  models_k8s_eso.py  models_ksm.py  models_pam_extended.py  models_privileged_access.py  models_saas_rotation.py  models_siem.py  models_terraform.py  models_tunnel.py  models_vault_sharing.py  models_workflow.py  msp_diff.py  msp_graph.py  msp_models.py  normalize.py  pam_extended_diff.py  planner.py  preview.py  redact.py  rules.py  schema.py  (+8 more)
keeper_sdk/crossplane/: __init__.py  provider.py
keeper_sdk/integrations/: __init__.py
keeper_sdk/mcp/: __init__.py  manifest_helper.py  server.py
keeper_sdk/providers/: SCAFFOLD.md  __init__.py  _commander_cli_helpers.py  commander_cli.py  commander_service.py  commander_version.py  mock.py  service_client.py
keeper_sdk/secrets/: SCAFFOLD.md  __init__.py  bootstrap.py  bus.py  ksm.py
scripts/: SCAFFOLD.md  check_public_content.sh  generate_public_docs.sh  publish.sh  sync_upstream.py
scripts/agent/: README.md  SCAFFOLD.md  _codex_resolve.sh  codex_live_smoke.sh  codex_offline_slice.sh  phase0_gates.sh  run_parallel_codex.sh  run_smoke_matrix.sh
scripts/coverage/: README.md  commander_coverage.py
scripts/daybook/: README.md  (+2 more)
tests/: SCAFFOLD.md  conftest.py  test_adoption_smoke.py  test_auth_helper.py  test_auth_ksm.py  test_bootstrap_ksm.py  test_bus.py  test_cli.py  test_cli_sharing_dispatch.py  test_commander_cli.py  test_commander_cli_cov_a.py  test_commander_cli_cov_b.py  test_commander_cli_cov_c.py  test_commander_cli_helpers.py  test_commander_cli_ksm_lifecycle.py  test_commander_cli_pam_gateway.py  test_commander_cli_sharing.py  test_commander_service_provider.py  test_commander_version.py  test_compat_shim.py  test_coverage_followups.py  test_crossplane_provider.py  test_daybook_harness.py  test_diff.py  test_dor_scenarios.py  test_dsk_run.py  test_enterprise_import.py  test_enterprise_models.py  test_enterprise_schema.py  test_epm_manifest.py  test_epm_schema.py  test_errors.py  test_examples_validate.py  test_graph.py  test_h_series_gaps.py  test_integrations_events.py  test_integrations_identity.py  test_integrations_offline.py  test_interfaces.py  test_jit_failclosed.py  (+101 more)
(+142 files in other folders)
