[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "declarative-sdk-for-k"
version = "1.0.0"
description = "Declarative lifecycle (validate / export / plan / diff / apply) across the full K surface — vault records, shared folders, teams, roles, enterprise config, KSM, PAM, compliance, rotation — agent- and LLM-friendly by design."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "declarative-sdk-for-k contributors" }]
keywords = [
    "keeper",
    "vault",
    "pam",
    "ksm",
    "enterprise",
    "declarative",
    "iac",
    "agents",
    "llm",
    "terraform-like",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
]
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "networkx>=3.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "jsonschema>=4.21",
    "keepercommander>=17.2.13,<18",
]

[project.urls]
Homepage = "https://github.com/msawczynk/declarative-sdk-for-k"
Issues = "https://github.com/msawczynk/declarative-sdk-for-k/issues"
Documentation = "https://github.com/msawczynk/declarative-sdk-for-k#readme"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "mypy",
    "ruff",
]

[project.scripts]
# Short, tab-completable, agent-friendly. Primary CLI name.
dsk = "keeper_sdk.cli:main"
# Backwards-compat aliases for pre-1.0 callers + CI scripts. Will be
# removed in v2.0.0 when the package is also renamed to `declarative_sdk_k`.
pamform = "keeper_sdk.cli:main"
keeper-sdk = "keeper_sdk.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["keeper_sdk*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"keeper_sdk.core.schemas" = ["*.json"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires a live Keeper tenant (set KEEPER_CONFIG)",
    "slow: perf / long tests",
]
